terraform/kubernetes/apps/platform-gateway-routes-sso/httproute-hello-platform-uat.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-platform-uat
  namespace: gateway-routes
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: platform-gateway
      namespace: platform-gateway
      sectionName: https
  hostnames:
    - hello-platform.uat.127.0.0.1.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy-hello-platform-uat
          namespace: sso
          port: 4180
          weight: 1
